attached_assets/Pasted-env-load-env-production-env-env-export-EXPO-PUBLIC-STRAVA-CLIENT-ID-EXPO-PUBLIC-STRAVA-CLIENT-SE-1755435130554_1755435130554.txt
env: load .env.production .env
env: export EXPO_PUBLIC_STRAVA_CLIENT_ID EXPO_PUBLIC_STRAVA_CLIENT_SECRET EXPO_PUBLIC_VPS_URL EXPO_PUBLIC_API_URL EXPO_PUBLIC_APP_STORE_URL EXPO_PUBLIC_SUPPORT_EMAIL EXPO_PUBLIC_CLARIFAI_API_KEY EXPO_PUBLIC_GOOGLE_VISION_API_KEY EXPO_PUBLIC_EMAILJS_SERVICE_ID EXPO_PUBLIC_EMAILJS_TEMPLATE_ID EXPO_PUBLIC_EMAILJS_PUBLIC_KEY
Starting Metro Bundler
iOS node_modules/expo-router/entry.js ▓▓▓▓▓▓░░░░░░░░░░ 39.7% (403/640)
iOS node_modules/expo-router/entry.js ▓▓▓▓▓▓▓▓▓▓▓▓▓▓░░ 92.8% (1472/1542)
iOS Bundling failed 6194ms node_modules/expo-router/entry.js (1654 modules)
SyntaxError: /Users/expo/workingdir/build/app/(client)/forme.tsx: Missing semicolon. (1250:8)

[0m [90m 1248 |[39m       [33mAlert[39m[33m.[39malert([32m'Erreur'[39m[33m,[39m [32m'Impossible de synchroniser les données de fréquence cardiaque'[39m)[33m;[39m
 [90m 1249 |[39m     }
[31m[1m>[22m[39m[90m 1250 |[39m   }[33m;[39m[32m', '[39m[33mUne[39m erreur est survenue[32m');[39m
 [90m      |[39m         [31m[1m^[22m[39m
 [90m 1251 |[39m     }
 [90m 1252 |[39m   }[33m;[39m
 [90m 1253 |[39m[0m
SyntaxError: SyntaxError: /Users/expo/workingdir/build/app/(client)/forme.tsx: Missing semicolon. (1250:8)

[0m [90m 1248 |[39m       [33mAlert[39m[33m.[39malert([32m'Erreur'[39m[33m,[39m [32m'Impossible de synchroniser les données de fréquence cardiaque'[39m)[33m;[39m
 [90m 1249 |[39m     }
[31m[1m>[22m[39m[90m 1250 |[39m   }[33m;[39m[32m', '[39m[33mUne[39m erreur est survenue[32m');[39m
 [90m      |[39m         [31m[1m^[22m[39m
 [90m 1251 |[39m     }
 [90m 1252 |[39m   }[33m;[39m
 [90m 1253 |[39m[0m
SyntaxError: /Users/expo/workingdir/build/app/(client)/forme.tsx: Missing semicolon. (1250:8)

[0m [90m 1248 |[39m       [33mAlert[39m[33m.[39malert([32m'Erreur'[39m[33m,[39m [32m'Impossible de synchroniser les données de fréquence cardiaque'[39m)[33m;[39m
 [90m 1249 |[39m     }
[31m[1m>[22m[39m[90m 1250 |[39m   }[33m;[39m[32m', '[39m[33mUne[39m erreur est survenue[32m');[39m
 [90m      |[39m         [31m[1m^[22m[39m
 [90m 1251 |[39m     }
 [90m 1252 |[39m   }[33m;[39m
 [90m 1253 |[39m[0m
    at constructor (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:367:19)
    at TypeScriptParserMixin.raise (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:6627:19)
    at TypeScriptParserMixin.semicolon (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:6923:10)
    at TypeScriptParserMixin.parseExpressionStatement (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:13285:10)
    at TypeScriptParserMixin.parseExpressionStatement (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:9611:26)
    at TypeScriptParserMixin.parseStatementContent (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12899:19)
    at TypeScriptParserMixin.parseStatementContent (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:9527:18)
    at TypeScriptParserMixin.parseStatementLike (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12767:17)
    at TypeScriptParserMixin.parseStatementListItem (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12747:17)
    at TypeScriptParserMixin.parseBlockOrModuleBlockBody (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:13316:61)
    at TypeScriptParserMixin.parseBlockBody (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:13309:10)
    at TypeScriptParserMixin.parseBlock (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:13297:10)
    at TypeScriptParserMixin.parseFunctionBody (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12101:24)
    at TypeScriptParserMixin.parseFunctionBodyAndFinish (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12087:10)
    at TypeScriptParserMixin.parseFunctionBodyAndFinish (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:9248:18)
    at /Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:13445:12
    at TypeScriptParserMixin.withSmartMixTopicForbiddingContext (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12404:14)
    at TypeScriptParserMixin.parseFunction (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:13444:10)
    at TypeScriptParserMixin.parseExportDefaultExpression (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:13907:19)
    at TypeScriptParserMixin.parseExportDefaultExpression (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:9487:18)
    at TypeScriptParserMixin.parseExport (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:13828:25)
    at TypeScriptParserMixin.parseExport (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:9470:20)
    at TypeScriptParserMixin.parseStatementContent (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12878:27)
    at TypeScriptParserMixin.parseStatementContent (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:9527:18)
    at TypeScriptParserMixin.parseStatementLike (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12767:17)
    at TypeScriptParserMixin.parseModuleItem (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12744:17)
    at TypeScriptParserMixin.parseBlockOrModuleBlockBody (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:13316:36)
    at TypeScriptParserMixin.parseBlockBody (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:13309:10)
    at TypeScriptParserMixin.parseProgram (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12625:10)
    at TypeScriptParserMixin.parseTopLevel (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12615:25)
    at TypeScriptParserMixin.parse (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:14492:10)
    at TypeScriptParserMixin.parse (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:10144:18)
    at parse (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:14505:26)
    at parser (/Users/expo/workingdir/build/node_modules/@babel/core/lib/parser/index.js:41:34)
    at parser.next (<anonymous>)
    at normalizeFile (/Users/expo/workingdir/build/node_modules/@babel/core/lib/transformation/normalize-file.js:64:37)
    at normalizeFile.next (<anonymous>)
    at run (/Users/expo/workingdir/build/node_modules/@babel/core/lib/transformation/index.js:22:50)
    at run.next (<anonymous>)
    at transform (/Users/expo/workingdir/build/node_modules/@babel/core/lib/transform.js:22:33)
    at transform.next (<anonymous>)
    at evaluateSync (/Users/expo/workingdir/build/node_modules/gensync/index.js:251:28)
    at sync (/Users/expo/workingdir/build/node_modules/gensync/index.js:89:14)
    at stopHiding - secret - don't use this - v1 (/Users/expo/workingdir/build/node_modules/@babel/core/lib/errors/rewrite-stack-trace.js:47:12)
    at Object.transformSync (/Users/expo/workingdir/build/node_modules/@babel/core/lib/transform.js:42:76)
    at parseWithBabel (/Users/expo/workingdir/build/node_modules/@expo/metro-config/build/transformSync.js:75:18)
    at transformSync (/Users/expo/workingdir/build/node_modules/@expo/metro-config/build/transformSync.js:54:16)
    at Object.transform (/Users/expo/workingdir/build/node_modules/@expo/metro-config/build/babel-transformer.js:118:58)
    at transformJSWithBabel (/Users/expo/workingdir/build/node_modules/@expo/metro-config/build/transform-worker/metro-transform-worker.js:470:47)
    at Object.transform (/Users/expo/workingdir/build/node_modules/@expo/metro-config/build/transform-worker/metro-transform-worker.js:585:12)
